--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
 </head>
 
 <body>
-	<div class="header">
-		<header>
-			<h1>This site is a work in progress, please check back later...</h1>
-		</header>
+	<div class="title-container">
+		<h1>No damsels?</h1>
 	</div>
-	<div class="image">
+	<div class="image-container">
 		<img src="assets/images/mike%20circle.png" alt="mike wazowski">
 	</div>
 </body>
