added basic media queries

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="author" content="Liam Chen">
 	<meta name="description" content="Personal website">
 	<meta name="google-site-verification" content="eBIybEPflgNdyubdks0Acl4CZVCtAXioAH6TmnAKHO4">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="assets/styles/styles.css">
 	<link rel="shortcut icon" href="assets/images/favicon.ico?" type="image/x-icon">
 	<!-- For Roboto from Google Fonts -->
@@ -15,11 +16,13 @@
 </head>
 
 <body>
-	<div class="title-container">
-		<h1>No damsels?</h1>
-	</div>
-	<div class="image-container">
-		<img src="assets/images/mike%20circle.png" alt="mike wazowski">
+	<div class="enclosing-container">
+		<div class="title-container">
+			<h1>No damsels?</h1>
+		</div>
+		<div class="image-container">
+			<img src="assets/images/mike%20circle.png" alt="mike wazowski">
+		</div>
 	</div>
 </body>
 
