--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<h1>No damsels?</h1>
 		</div>
 		<div class="image-container">
-			<img src="assets/images/mike%20circle.png" alt="mike wazowski">
+			<img src="assets/images/megamind-circle.png" alt="mike wazowski">
 		</div>
 	</div>
 </body>
