undergoing changes, updated landing page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<div class="enclosing-container">
 		<div class="title-container">
-			<h1>No damsels?</h1>
+			<h1>This site is undergoing changes, please come back later!</h1>
 		</div>
 		<div class="image-container">
 			<img src="assets/images/megamind-circle.png" alt="mike wazowski">
