added microcaml project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Liam Chen</title>
 	<meta charset="utf-8">
 	<meta name="author" content="Liam Chen">
-	<meta name="description" content="Personal website">
+	<meta name="description" content="My personal website">
 	<link rel="stylesheet" href="assets/styles/styles.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<!-- JQuery for all the JS stuff -->
@@ -89,7 +89,7 @@
 					<li><span>HTML</span></li>
 					<li><span>CSS/Sass</span></li>
 					<li><span>Git & Github</span></li>
-					<li><span>React</span></li>
+					<!-- <li><span>React</span></li> Coming soon! Hopefully --> 
 					<li><span>PostgreSQL</span></li>
 				</ul>
 			</div>
@@ -242,10 +242,17 @@
 				</li>
 				<li class="project-panel">
 					<div class="project-title">
-						<img src='assets/images/webpage.svg' alt="something">
+						<img src='assets/images/subtitles.svg' alt="Interpreter">
 						<p>MicroCaml Interpreter</p>
 					</div>
-					<p class="project-text">I forgor </p>
+					<p class="project-text">Implemented a lexer, parser, and an interpreter for "MicroCaml"
+					(a dynamically-typed, simplified version of OCaml). </p>
+					<div class="project-bottom">
+						<p>OCaml, ASTs, CFGs </p>
+						<a href="https://github.com/liamc1011" target="_blank">
+							<img src="assets/images/github-white.svg" alt="GitHub logo">
+						</a>
+					</div>
 				</li>
 			</ul>
 		</div>
