updated github project links

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 					<p class="project-text">Program to quickly obtain and display Instagram follower data. Allows you to see who doesn't follow you back.</p>
 					<div class="project-bottom">
 						<p>Python, Selenium WebDriver</p>
-						<a href="https://github.com/liamc1011" target="_blank">
+						<a href="https://github.com/liamc1011/Instagram-Webscraper" target="_blank">
 							<img src="assets/images/github-white.svg" alt="GitHub logo">
 						</a>
 					</div>
