added React to Skills section

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 				<ul class="skills-list">
 					<li><span>HTML</span></li>
 					<li><span>CSS/Sass</span></li>
-					<li><span>Git & Github</span></li>
-					<!-- <li><span>React</span></li> Coming soon! Hopefully --> 
+					<li><span>Git & GitHub</span></li>
 					<li><span>PostgreSQL</span></li>
+					<li><span>React</span></li>
 				</ul>
 			</div>
 			<!-- <ul>
