removed mobile excuse temporarily

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 	<script src="scripts/ScrollReveal.js"></script>
 	<script src="scripts/SmoothScroll.js"></script>
 	<script src="scripts/ChangeExperience.js"></script>
-	<script src="scripts/MobileExcuse.js"></script>
+<!--	<script src="scripts/MobileExcuse.js"></script> -->
 </body>
 
 </html>
