updated experience section

--- a/index.html
+++ b/index.html
@@ -138,11 +138,21 @@
 				<ul class="experience-label-list">
 					<!-- NOTE: experience-label IDs must match their corresponding experience-item IDs
 					in order for ChangeExperience.js to work!! -->
-					<li class="experience-label" id="it-desk-label">UMD Divison of IT</li>
+					<li class="experience-label" id="mt-bank-label">M&amp;T Bank</li>
+                    <li class="experience-label" id="it-desk-label">UMD Divison of IT</li>
 					<li class="experience-label" id="currently-seeking-label">Currently Seeking</li>
 				</ul>
 				<div class="experience-divider"></div>
-				<div class="experience-item" id="it-desk">
+				<div class="experience-item" id="mt-bank">
+					<h4>Software Engineering Intern (TIP)</h4>
+					<p>Jun 2023 - Aug 2023</p>
+					<ul>
+						<li>
+							<span>Incoming SWE intern at M&amp;T Bank, as part of their Technology Internship Program</span>
+							</li>
+						</ul>
+					</div>
+                <div class="experience-item" id="it-desk">
 					<h4>IT Help Desk Technician</h4>
 					<p>Jul 2021 - Dec 2021</p>
 					<ul>
@@ -162,7 +172,8 @@
 						<h4>Always Looking for More Experience!</h4>
 						<p>Current</p>
 						<ul>
-							<li><span>I'm currently looking for a summer or fall internship or co-op! </span></li>
+							<li><span>I'm currently looking for a fall 2023 internship/co-op, as well as a full time
+                            position for 2024! </span></li>
 							<li><span>Check the <a href="#contact">Contact</a> section below to get in touch with me.</span></li>
 						</ul>
 					</div>
