tweaked skills section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<li><span>HTML</span></li>
 					<li><span>CSS/Sass</span></li>
 					<li><span>Git & GitHub</span></li>
-					<li><span>PostgreSQL</span></li>
+					<li><span>SQL</span></li>
 					<li><span>React</span></li>
 				</ul>
 			</div>
