updated resume and skills

--- a/index.html
+++ b/index.html
@@ -78,19 +78,21 @@
 			</div>
 			<div class="skills-list-wrapper"> <!-- wrapper for facilitating column layout on mobile -->
 				<ul class="skills-list">
-					<li><span>Java</span></li>
 					<li><span>Python</span></li>
+					<li><span>Java</span></li>
+					<li><span>C#</span></li>
 					<li><span>JavaScript</span></li>
-					<li><span>Ruby</span></li>
 					<li><span>C</span></li>
 					<li><span>OCaml</span></li>
+					<li><span>Haskell</span></li>
 				</ul>
 				<ul class="skills-list">
-					<li><span>HTML</span></li>
-					<li><span>CSS/Sass</span></li>
-					<li><span>Git & GitHub</span></li>
+					<li><span>HTML/CSS</span></li>
 					<li><span>SQL</span></li>
-					<li><span>React</span></li>
+					<li><span>Git</span></li>
+					<li><span>Blazor</span></li>
+					<li><span>ASP.NET Core</span></li>
+					<li><span>Pandas/NumPy</span></li>
 				</ul>
 			</div>
 			<!-- <ul>
