updated intro a little bit (more to come)

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 		<h2>About Me</h2>
 		<div class="about-text-wrapper">
 			<p class="about-text">
-				Welcome! I am currently a third-year student studying Computer Science at the University of Maryland.
-				My areas of interest include automation, full-stack web development, and human-computer interaction. 
+				Welcome! I am currently a fourth-year student studying Computer Science at the University of Maryland.
+				My areas of interest include automation, full-stack development, natural language processing, and
+                compilers. 
 				In my free time, I like to solve Rubik's Cubes (blindfolded) and play the drums!
 			</p>
 			<img class="cubing-pic" src="assets/images/cubing-color-changed.jpg" alt="A photo of me solving a Rubik's cube blindfolded">
