added brick counter

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 				<br> Please come back soon <span id="smiley">˙ᵕ˙</span>
 			</h1>
 			<img class="construction-gif" src="assets/images/construction.gif" alt="A penguin laying bricks">
+			<p id="brick-counter">
+				<span id="brick-count">0</span>
+				bricks placed so far...
+			</p>
 			<div class="contact-wrapper">
 				<ul class='links-list'>
 					<li class="email-link">
@@ -59,6 +63,7 @@
 	</div> -->
 
 	<!-- <script src="scripts/ScrollReveal.js"></script> -->
+	 <script src="scripts/Counter.js"></script>
 </body>
 
 </html>
